--- a/courses_other.html
+++ b/courses_other.html
@@ -597,6 +597,107 @@ permalink: /courses/other-courses/
                             <td>Sequencing</td>
                         </tr>
 
+
+
+                        <tr>
+                            <td>University of Glasglow</td>
+                            <td>
+                                <li> <a href="https://www.gla.ac.uk/researchinstitutes/iii/informationforstudents/communication/internalevents/bioinformatics/"
+                                        target="_blank">Glasglow
+                                        Bioinformatics Summerschool</a>
+                                </li>
+
+                            </td>
+                            <td>Beginner</td>
+                            <td>Research/academia</td>
+
+                            <td>Experimental biologists at research institutions</td>
+                            <td></td>
+                        </tr>
+
+
+
+                        <tr>
+                            <td>University of Pennsylvania</td>
+                            <td>
+                                <li> <a href="https://workshop.veupathdb.org/athens/2021/" target="_blank">VEuPathDB
+                                        workshop</a>
+                                </li>
+
+                            </td>
+                            <td>Beginner</td>
+                            <td>Research/academia</td>
+
+                            <td>Experimental biologists</td>
+                            <td></td>
+                        </tr>
+
+
+
+
+
+                        <tr>
+                            <td>Welcome connecting science</td>
+                            <td>
+                                <li> <a href="https://coursesandconferences.wellcomeconnectingscience.org/event/working-with-pathogen-genomes-asia-virtual-20210510/"
+                                        target="_blank">Working with
+                                        pathogen genomes</a>
+                                </li>
+
+                            </td>
+                            <td>Beginner</td>
+                            <td>Research/academia</td>
+
+                            <td>Bioinformaticians based at health institute</td>
+                            <td></td>
+                        </tr>
+
+
+                        <tr>
+                            <td>Monash University</td>
+                            <td>
+                                SARS-CoV-2 Sequencing and bioinformatics
+
+                            </td>
+                            <td>Beginner</td>
+                            <td>Research/academia</td>
+
+                            <td>Researchers and public health officials interested in viral genomics and bioinformatics.
+                            </td>
+                            <td></td>
+                        </tr>
+
+                        <tr>
+                            <td>Welcome connecting science</td>
+                            <td>
+                                <li> <a href="https://github.com/WGCAdvancedCourses/WWPG_2021" target="_blank">Working
+                                        with Pathogen Genomes, Asia</a>
+                                </li>
+
+                            </td>
+                            <td>Beginner</td>
+                            <td>Research/academia</td>
+
+                            <td>Researchers working in the field of infectious diseases in Asia. </td>
+                            <td></td>
+                        </tr>
+
+                        <tr>
+                            <td>University of Ibadan</td>
+                            <td>
+                                <li>Introduction to Bioinformatics for Bacterial Genomics
+                                </li>
+
+                            </td>
+                            <td>Beginner</td>
+                            <td>Public health</td>
+
+                            <td>Postgraduate students</td>
+                            <td></td>
+                        </tr>
+
+
+
                         <tr>
                             <td>University of Ibadan</td>
                             <td>
@@ -628,12 +729,142 @@ permalink: /courses/other-courses/
                             <td>Research/academia</td>
 
                             <td>Bioinformaticians based at health institutes, experimental biologists at research
-                                institutions
+                                institutions</td>
                             <td>Epidemiology, Pathogen genomics for clinicians, Sequencing, Bioinformatics, Data
                                 analysis,
                                 data
                                 visualization, data management or a related topic</td>
                         </tr>
+
+
+
+                        <!-- Additional -->
+                        <tr>
+                            <td>Welcome connecting science</td>
+                            <td>
+                                <li> <a href="https://www.futurelearn.com/courses/linux-for-bioinformatics"
+                                        target="_blank">Bioinformatics for Biologists: An Introduction to Linux, Bash
+                                        Scripting, and R</a>
+                                </li>
+
+                            </td>
+                            <td>Beginner</td>
+                            <td>Research/academia</td>
+
+                            <td>Bioinformaticians based at health institutes and experimental biologists at research
+                                institutions</td>
+                            <td></td>
+                        </tr>
+
+
+                        <!-- Additional -->
+                        <tr>
+                            <td>Welcome connecting science</td>
+                            <td>
+                                <li> <a href="https://www.futurelearn.com/courses/antimicrobial-resistance"
+                                        target="_blank">Bacterial Genomes: Antimicrobial Resistance in Bacterial
+                                        Pathogens</a>
+                                </li>
+
+                            </td>
+                            <td>Beginner</td>
+                            <td>Research/academia</td>
+
+                            <td>Bioinformaticians based at health institutes and experimental biologists at research
+                                institutions</td>
+                            <td></td>
+                        </tr>
+
+
+
+                        <!-- Additional -->
+                        <tr>
+                            <td>Welcome connecting science</td>
+                            <td>
+                                <li> <a href="https://www.futurelearn.com/courses/bacterial-genomes-bioinformatics"
+                                        target="_blank">Bacterial Genomes I: From DNA to Protein Function Using
+                                        Bioinformatics</a>
+                                </li>
+
+                            </td>
+                            <td>Beginner</td>
+                            <td>Research/academia</td>
+
+                            <td>Bioinformaticians based at health institutes and experimental biologists at research
+                                institutions</td>
+                            <td></td>
+                        </tr>
+
+
+                        <tr>
+                            <td>Welcome connecting science</td>
+                            <td>
+                                <li> <a href="https://www.futurelearn.com/courses/bacterial-genomes-access-and-analysis"
+                                        target="_blank">Bacterial Genomes II: Accessing and Analysing Microbial Genome
+                                        Data Using Artemis</a>
+                                </li>
+
+                            </td>
+                            <td>Beginner</td>
+                            <td>Research/academia</td>
+
+                            <td>Bioinformaticians based at health institutes and experimental biologists at research
+                                institutions</td>
+                            <td></td>
+                        </tr>
+
+                        <tr>
+                            <td>Welcome connecting science</td>
+                            <td>
+                                <li> <a href="https://www.futurelearn.com/courses/bacterial-genomes-comparative-genomics-act"
+                                        target="_blank">Bacterial Genomes III: Comparative Genomics using Artemis
+                                        Comparison Tool (ACT)</a>
+                                </li>
+
+                            </td>
+                            <td>Beginner</td>
+                            <td>Research/academia</td>
+
+                            <td>Bioinformaticians based at health institutes and experimental biologists at research
+                                institutions</td>
+                            <td></td>
+                        </tr>
+
+                        <tr>
+                            <td>Welcome connecting science</td>
+                            <td>
+                                <li> <a href="https://www.futurelearn.com/courses/introduction-to-bacterial-genomics"
+                                        target="_blank">Introduction to bacterial genomics</a>
+                                </li>
+
+                            </td>
+                            <td>Beginner</td>
+                            <td>Research/academia</td>
+
+                            <td>Bioinformaticians based at health institutes and experimental biologists at research
+                                institutions</td>
+                            <td></td>
+                        </tr>
+
+
+                        <tr>
+                            <td>Welcome connecting science</td>
+                            <td>
+                                <li> <a href="https://www.futurelearn.com/courses/train-the-trainer-design-genomics-training"
+                                        target="_blank">Train the Trainer: Design Genomics and Bioinformatics
+                                        Training</a>
+                                </li>
+
+                            </td>
+                            <td>Beginner</td>
+                            <td>Research/academia</td>
+
+                            <td>Bioinformaticians based at health institutes and experimental biologists at research
+                                institutions</td>
+                            <td></td>
+                        </tr>
+
+
 
                     </tbody>
                 </table>
