--- a/courses_other.html
+++ b/courses_other.html
@@ -637,7 +637,7 @@ permalink: /courses/other-courses/
 
 
                         <tr>
-                            <td>Welcome connecting science</td>
+                            <td>Wellcome connecting science</td>
                             <td>
                                 <li> <a href="https://coursesandconferences.wellcomeconnectingscience.org/event/working-with-pathogen-genomes-asia-virtual-20210510/"
                                         target="_blank">Working with
@@ -668,7 +668,7 @@ permalink: /courses/other-courses/
                         </tr>
 
                         <tr>
-                            <td>Welcome connecting science</td>
+                            <td>Wellcome connecting science</td>
                             <td>
                                 <li> <a href="https://github.com/WGCAdvancedCourses/WWPG_2021" target="_blank">Working
                                         with Pathogen Genomes, Asia</a>
@@ -740,7 +740,7 @@ permalink: /courses/other-courses/
 
                         <!-- Additional -->
                         <tr>
-                            <td>Welcome connecting science</td>
+                            <td>Wellcome connecting science</td>
                             <td>
                                 <li> <a href="https://www.futurelearn.com/courses/linux-for-bioinformatics"
                                         target="_blank">Bioinformatics for Biologists: An Introduction to Linux, Bash
@@ -759,7 +759,7 @@ permalink: /courses/other-courses/
 
                         <!-- Additional -->
                         <tr>
-                            <td>Welcome connecting science</td>
+                            <td>Wellcome connecting science</td>
                             <td>
                                 <li> <a href="https://www.futurelearn.com/courses/antimicrobial-resistance"
                                         target="_blank">Bacterial Genomes: Antimicrobial Resistance in Bacterial
@@ -779,7 +779,7 @@ permalink: /courses/other-courses/
 
                         <!-- Additional -->
                         <tr>
-                            <td>Welcome connecting science</td>
+                            <td>Wellcome connecting science</td>
                             <td>
                                 <li> <a href="https://www.futurelearn.com/courses/bacterial-genomes-bioinformatics"
                                         target="_blank">Bacterial Genomes I: From DNA to Protein Function Using
@@ -797,7 +797,7 @@ permalink: /courses/other-courses/
 
 
                         <tr>
-                            <td>Welcome connecting science</td>
+                            <td>Wellcome connecting science</td>
                             <td>
                                 <li> <a href="https://www.futurelearn.com/courses/bacterial-genomes-access-and-analysis"
                                         target="_blank">Bacterial Genomes II: Accessing and Analysing Microbial Genome
@@ -814,7 +814,7 @@ permalink: /courses/other-courses/
                         </tr>
 
                         <tr>
-                            <td>Welcome connecting science</td>
+                            <td>Wellcome connecting science</td>
                             <td>
                                 <li> <a href="https://www.futurelearn.com/courses/bacterial-genomes-comparative-genomics-act"
                                         target="_blank">Bacterial Genomes III: Comparative Genomics using Artemis
@@ -831,7 +831,7 @@ permalink: /courses/other-courses/
                         </tr>
 
                         <tr>
-                            <td>Welcome connecting science</td>
+                            <td>Wellcome connecting science</td>
                             <td>
                                 <li> <a href="https://www.futurelearn.com/courses/introduction-to-bacterial-genomics"
                                         target="_blank">Introduction to bacterial genomics</a>
@@ -848,7 +848,7 @@ permalink: /courses/other-courses/
 
 
                         <tr>
-                            <td>Welcome connecting science</td>
+                            <td>Wellcome connecting science</td>
                             <td>
                                 <li> <a href="https://www.futurelearn.com/courses/train-the-trainer-design-genomics-training"
                                         target="_blank">Train the Trainer: Design Genomics and Bioinformatics
