updated past course page nd carpentries

--- a/past_courses_training.html
+++ b/past_courses_training.html
@@ -7,15 +7,12 @@ permalink: /courses/past-courses/
 <div class="row">
 
   <div class="col-sm-12">
-    <p>
-    <h3>Past courses and training events</h3>
-    </p>
     <div class="panel-group " id="accordion">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-              SARS-CoV-2 NGS training course 2021 for Africa CDC</a>
+              Past courses and training events</a>
           </h4>
         </div>
         <div id="collapse1" class="panel-collapse collapse in">
