--- a/courses_otherbackup.html
+++ b/courses_otherbackup.html
@@ -1,18 +1,12 @@
 ---
 layout: default
 title: Other pathogen surveillance courses
-permalink: /courses/other-courses/
+permalink: /courses/other-coursesb/
 ---
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
-
-
-
-
-
 
 
 <div class="container-fluid">
@@ -33,7 +27,8 @@ permalink: /courses/other-courses/
                             <th>Context </th>
                             <th>Audience</th>
                             <th>Primary focus areas of the course</th>
-                            <th>more</th>
+                            <th> </th>
+
                         </tr>
                     </thead>
                     <tbody id="myTable">
@@ -54,72 +49,69 @@ permalink: /courses/other-courses/
                                 management or a related topic</td>
                             <td>
 
+                                <div class="modalsection">
 
+                                    <!-- Button to Open the Modal -->
+                                    <button type="button" class="btn btn-danger btn-sm" data-toggle="modal"
+                                        data-target="#myModal1">
+                                        more
+                                    </button>
 
-                                <!-- inside modal-->
-                                <!-- Button to Open the Modal -->
-                                <button type="button" class="btn btn-danger btn-sm" data-toggle="modal"
-                                    data-target="#myModal1">
-                                    more
-                                </button>
+                                    <!-- The Modal -->
+                                    <div class="modal fade" id="myModal1">
+                                        <div class="modal-dialog modal-md">
+                                            <div class="modal-content">
 
-                                <!-- The Modal -->
-                                <div class="modal fade" id="myModal1">
-                                    <div class="modal-dialog modal-lg">
-                                        <div class="modal-content">
+                                                <!-- Modal Header -->
+                                                <div class="modal-header">
+                                                    <p class="modal-title">Mathematical Models for Infectious Disease
+                                                        Dynamics </p>
+                                                    <button type="button" class="close"
+                                                        data-dismiss="modal">&times;</button>
+                                                </div>
 
-                                            <!-- Modal Header -->
-                                            <div class="modal-header">
-                                                <p class="modal-title font-weight-bold">Mathematical Models for
-                                                    Infectious Disease
-                                                    Dynamics </p>
-                                                <button type="button" class="close"
-                                                    data-dismiss="modal">&times;</button>
+                                                <!-- Modal body -->
+                                                <div class="modal-body">
+                                                    <table class="table table-striped">
+                                                        <thead>
+                                                            <tr>
+                                                                <th>Firstname</th>
+                                                                <th>Lastname</th>
+                                                                <th>Email</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            <tr>
+                                                                <td>John</td>
+                                                                <td>Doe</td>
+                                                                <td>john@example.com</td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td>Mary</td>
+                                                                <td>Moe</td>
+                                                                <td>mary@example.com</td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td>July</td>
+                                                                <td>Dooley</td>
+                                                                <td>july@example.com</td>
+                                                            </tr>
+                                                        </tbody>
+                                                        <script src="js/tablesort.js"></script>
+                                                    </table>
+                                                </div>
+
+                                                <!-- Modal footer -->
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-danger btn-sm"
+                                                        data-dismiss="modal">Close</button>
+                                                </div>
+
                                             </div>
-
-                                            <!-- Modal body -->
-                                            <div class="modal-body">
-                                                <table class="table table-striped">
-                                                    <thead>
-                                                        <tr>
-                                                            <th>Location</th>
-                                                            <th>Sub-topics</th>
-                                                            <th>Formal assessment</th>
-                                                            <th>Accredited</th>
-                                                            <th>Available</th>
-                                                            <th>Duration</th>
-                                                            <th>Live/Online</th>
-                                                            <th>With subtitles</th>
-                                                        </tr>
-
-                                                    </thead>
-                                                    <tbody>
-                                                        <tr>
-                                                            <td>UK </td>
-                                                            <td>--</td>
-                                                            <td>--</td>
-                                                            <td>--</td>
-                                                            <td>once a year or every two years</td>
-                                                            <td>5 days</td>
-                                                            <td>--</td>
-                                                            <td>--</td>
-                                                        </tr>
-                                                    </tbody>
-
-                                                </table>
-                                            </div>
-
-                                            <!-- Modal footer -->
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-danger btn-sm"
-                                                    data-dismiss="modal">Close</button>
-                                            </div>
-
                                         </div>
                                     </div>
+
                                 </div>
-
-
                             </td>
                         </tr>
                         <tr>
@@ -138,73 +130,48 @@ permalink: /courses/other-courses/
                                 data
                                 management or a related topic</td>
 
-
-
                             <td>
 
-                                <!-- Button to Open the Modal -->
-                                <button type="button" class="btn btn-danger btn-sm" data-toggle="modal"
-                                    data-target="#myModal2">
-                                    more
-                                </button>
+                                <div class="modalsection">
 
-                                <!-- The Modal -->
-                                <div class="modal fade" id="myModal2">
-                                    <div class="modal-dialog modal-lg">
-                                        <div class="modal-content">
+                                    <!-- Button to Open the Modal -->
+                                    <button type="button" class="btn btn-danger btn-sm" data-toggle="modal"
+                                        data-target="#myModal2">
+                                        more
+                                    </button>
 
-                                            <!-- Modal Header -->
-                                            <div class="modal-header">
-                                                <p class="modal-title font-weight-bold">Computational Molecular
-                                                    Evolution </p>
-                                                <button type="button" class="close"
-                                                    data-dismiss="modal">&times;</button>
+                                    <!-- The Modal -->
+                                    <div class="modal fade" id="myModal2">
+                                        <div class="modal-dialog modal-md">
+                                            <div class="modal-content">
+
+                                                <!-- Modal Header -->
+                                                <div class="modal-header">
+                                                    <h4 class="modal-title">Modal Heading</h4>
+                                                    <button type="button" class="close"
+                                                        data-dismiss="modal">&times;</button>
+                                                </div>
+
+                                                <!-- Modal body -->
+                                                <div class="modal-body">
+                                                    Modal body.. 2
+                                                </div>
+
+                                                <!-- Modal footer -->
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-danger btn-sm"
+                                                        data-dismiss="modal">Close</button>
+                                                </div>
+
                                             </div>
-
-                                            <!-- Modal body -->
-                                            <div class="modal-body">
-                                                <table class="table table-striped table-sortable ">
-                                                    <thead>
-                                                        <tr>
-                                                            <th>Location</th>
-                                                            <th>Sub-topics</th>
-                                                            <th>Formal assessment</th>
-                                                            <th>Accredited</th>
-                                                            <th>Available</th>
-                                                            <th>Duration</th>
-                                                            <th>Live or Online</th>
-                                                            <th>With subtitles</th>
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                        <tr>
-                                                            <td>UK </td>
-                                                            <td>--</td>
-                                                            <td>--</td>
-                                                            <td>--</td>
-                                                            <td>--</td>
-                                                            <td>5 days</td>
-                                                            <td>--</td>
-                                                            <td>--</td>
-                                                        </tr>
-                                                    </tbody>
-
-                                                </table>
-                                            </div>
-
-                                            <!-- Modal footer -->
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-danger btn-sm"
-                                                    data-dismiss="modal">Close</button>
-                                            </div>
-
                                         </div>
                                     </div>
+
                                 </div>
-
-
-
                             </td>
+
+
+
                         </tr>
                         <tr>
                             <td>Wellcome Connecting Science</td>
@@ -459,8 +426,7 @@ permalink: /courses/other-courses/
                             <td>Johns Hopkins University</td>
                             <td>
                                 <li> <a href="https://www.youtube.com/playlist?list=PLWQWtO75LakmVZZRQKqGIMRyvEiCD-y2T"
-                                        target="_blank">JHU/NCDC
-                                        Sequencing Workshop</a>
+                                        target="_blank">JHU/NCDC Sequencing Workshop</a>
                                 </li>
                             </td>
                             <td>Intermediate</td>
@@ -690,8 +656,7 @@ permalink: /courses/other-courses/
                             <td>(US) Centers for Disease Control and Prevention</td>
                             <td>
                                 <li><a href="https://www.cdc.gov/amd/what-we-do/building-capacity-workforce.html"
-                                        target="_blank">Molecular
-                                        Epidemiology for Epidemiologists</a></li>
+                                        target="_blank">Molecular Epidemiology for Epidemiologists</a></li>
 
                             </td>
                             <td>Beginner</td>
@@ -705,8 +670,7 @@ permalink: /courses/other-courses/
                             <td>NGS Academy for the Africa Pathogen Genomics Initiative</td>
                             <td>
                                 <li><a href="https://uct-cbio.github.io/ngs-academy/2021/NGS-SARS-CoV-2-past-course"
-                                        target="_blank">Next
-                                        Generation Sequencing Bioinformatics Training Course</a>
+                                        target="_blank">Next Generation Sequencing Bioinformatics Training Course</a>
                                 </li>
 
                             </td>
@@ -727,8 +691,7 @@ permalink: /courses/other-courses/
                             <td>Institut Pasteur de Tunis</td>
                             <td>
                                 <li><a href="https://www.h3abionet.org/categories/training/"
-                                        target="_blank">Introduction to NGS Technologies
-                                        and their applications</a></li>
+                                        target="_blank">Introduction to NGS Technologies and their applications</a></li>
                                 </li>
                             </td>
                             <td>Beginner</td>
@@ -884,8 +847,7 @@ permalink: /courses/other-courses/
                             <td>Wellcome connecting science</td>
                             <td>
                                 <li> <a href="https://www.futurelearn.com/courses/linux-for-bioinformatics"
-                                        target="_blank">Bioinformatics for
-                                        Biologists: An Introduction to Linux, Bash
+                                        target="_blank">Bioinformatics for Biologists: An Introduction to Linux, Bash
                                         Scripting, and R</a>
                                 </li>
 
@@ -904,8 +866,7 @@ permalink: /courses/other-courses/
                             <td>Wellcome connecting science</td>
                             <td>
                                 <li> <a href="https://www.futurelearn.com/courses/antimicrobial-resistance"
-                                        target="_blank">Bacterial Genomes:
-                                        Antimicrobial Resistance in Bacterial
+                                        target="_blank">Bacterial Genomes: Antimicrobial Resistance in Bacterial
                                         Pathogens</a>
                                 </li>
 
@@ -925,8 +886,7 @@ permalink: /courses/other-courses/
                             <td>Wellcome connecting science</td>
                             <td>
                                 <li> <a href="https://www.futurelearn.com/courses/bacterial-genomes-bioinformatics"
-                                        target="_blank">Bacterial
-                                        Genomes I: From DNA to Protein Function Using
+                                        target="_blank">Bacterial Genomes I: From DNA to Protein Function Using
                                         Bioinformatics</a>
                                 </li>
 
