--- a/courses_otherbackup.html
+++ b/courses_otherbackup.html
@@ -4,9 +4,10 @@ title: Other pathogen surveillance courses
 permalink: /courses/other-coursesb/
 ---
 
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<!-- 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
+<!-- <script src="js/bootstrap.min.js"></script> -->
 
 
 <div class="container-fluid">
