removed one directory

--- a/calendar.html
+++ b/calendar.html
@@ -7,8 +7,8 @@ permalink: /calendar/
 
 <head>
   <meta charset='utf-8' />
-  <link href='ngs-academy/fullcalendarlib/main.css' rel='stylesheet' />
-  <script src='ngs-academy/fullcalendarlib/main.js'></script>
+  <link href='fullcalendarlib/main.css' rel='stylesheet' />
+  <script src='fullcalendarlib/main.js'></script>
 
 
   <script>
