--- a/courses_other.html
+++ b/courses_other.html
@@ -4244,6 +4244,101 @@ permalink: /courses/other-courses/
                             </td>
                         </tr>
 
+                        <!-- With modal -->
+                        <tr>
+                            <td>Thermo Fisher Scientific</td>
+                            <td>
+                                <li> <a href="http://tools.thermofisher.com/content/sfs/brochures/bioinformatics-training-education-brochure.pdf"
+                                        target="_blank">Bioinformatics for molecular biologists</a>
+                                </li>
+
+                            </td>
+                            <td>Beginner</td>
+                            <td>Research/academia</td>
+
+                            <td>Biologist with no prior experience in bioinformatics</td>
+                            <td>Data analysis, data visualization, data management or a related topic (as would be
+                                applicable in the context of public health, pathogen genomics and epidemiology)</td>
+                            <td>
+
+
+
+                                <!-- Button to Open the Modal -->
+                                <button type="button" class="btn btn-danger btn-sm" data-toggle="modal"
+                                    data-target="#myModal49">
+                                    more
+                                </button>
+
+                                <!-- The Modal -->
+                                <div class="modal fade" id="myModal49">
+                                    <div class="modal-dialog modal-lg">
+                                        <div class="modal-content">
+
+                                            <!-- Modal Header -->
+                                            <div class="modal-header">
+                                                <p class="modal-title font-weight-bold">Bioinformatics for molecular
+                                                    biologists
+                                                </p>
+                                                <button type="button" class="close"
+                                                    data-dismiss="modal">&times;</button>
+                                                <br>
+                                            </div>
+
+                                            <!-- Modal body -->
+                                            <div class="modal-body">
+                                                <table class="table table-striped table-sortable ">
+                                                    <thead>
+                                                        <tr>
+                                                            <th>Location</th>
+                                                            <th>Sub-topics</th>
+                                                            <th>Formal assessment</th>
+                                                            <th>Accredited</th>
+                                                            <th>Available</th>
+                                                            <th>Duration</th>
+                                                            <th>Live or Online</th>
+                                                            <th>With subtitles</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        <tr>
+                                                            <td>Johannesburg, South Africa</td>
+                                                            <td>
+                                                                Course is broken up in 3 modules namely Linux
+                                                                Python/Pearl MySQL The aim is to provide introductory
+                                                                training in order to get participants comfortable to
+                                                                script and start using linux based software
+                                                            </td>
+                                                            <td>No
+                                                            <td>yes, Training Certificate from Thermo Fisher
+                                                            </td>
+                                                            <td>Course is scheduled as needed, with standing courses as
+                                                                well through the year </td>
+                                                            <td>5 day hands on instructor led training either face to
+                                                                face or virtual
+                                                            </td>
+                                                            <td>
+                                                                In person or Online</td>
+                                                            <td>None
+                                                            </td>
+                                                        </tr>
+                                                    </tbody>
+
+                                                </table>
+                                            </div>
+
+                                            <!-- Modal footer -->
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-danger btn-sm"
+                                                    data-dismiss="modal">Close</button>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </td>
+                        </tr>
+
 
                     <tfoot>
                         <tr>
