--- a/calendar.html
+++ b/calendar.html
@@ -19,10 +19,10 @@ permalink: /calendar/
       var calendarEl = document.getElementById('calendar');
 
       var calendar = new FullCalendar.Calendar(calendarEl, {
-        googleCalendarApiKey: 'AIzaSyAuKfoAVLavplIfA-lajpZ2hE_-NKIDFqs',
+        googleCalendarApiKey: 'AIzaSyDzDQvl0Rfp3cwzxKtVbkOAvoYCERJSUIE',
         eventSources: [
           {
-            googleCalendarId: 'perceval.maturure@gmail.com'
+            googleCalendarId: 'ngs.academy.pgi@gmail.com'
           },
           // {
           //   googleCalendarId: 'efgh5678@group.calendar.google.com',
