removed available courses and addded ngs course 2022

--- a/courses.html
+++ b/courses.html
@@ -47,8 +47,8 @@ permalink: /courses/
 
   </div>
   <div id="section2" class="blockx side_menu_bg">
-    <h3>Available courses</h3>
-    <hr>
+    <!-- <h3>Available courses</h3> -->
+    <!-- <hr> -->
     {% for post in site.posts %}
     {% if post.categories contains "available" %}
     <li class="list-unstyled">
