--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ permalink: /
   </div>
 </div>
 
-<div class="row ">
+<!-- <div class="row ">
 
   <div class="col-sm-12">
 
@@ -57,7 +57,7 @@ permalink: /
     <a href="{{ site.baseurl }}/courses">Schedule of available courses</a>
 
   </div>
-</div>
+</div> -->
 
 <!-- <div class="row ">
 
