--- a/courses_other.html
+++ b/courses_other.html
@@ -4340,6 +4340,98 @@ permalink: /courses/other-courses/
                         </tr>
 
 
+
+                        <tr>
+                            <td>Fleming Fund Regional Grant SEQAFRICA</td>
+                            <td>
+                                <li><a href="https://antimicrobialresistance-dk.danaweb5.com/seqafrica/seqafrica-courses/sars-cov-2-whole-genome-sequencing.aspx"
+                                        target="_blank">SARS-CoV-2 whole genome sequencing
+                                    </a></li>
+                            </td>
+                            <td>Intermediate</td>
+                            <td>Research/academia</td>
+
+                            <td>Users with some experience/knowledge of whole genome sequencing (WGS) and WGS data.
+                            </td>
+                            <td>Epidemiology</td>
+                            <td>
+
+
+
+                                <!-- inside modal-->
+                                <!-- Button to Open the Modal -->
+                                <button type="button" class="btn btn-danger btn-sm" data-toggle="modal"
+                                    data-target="#myModal50">
+                                    more
+                                </button>
+
+                                <!-- The Modal -->
+                                <div class="modal fade" id="myModal50">
+                                    <div class="modal-dialog modal-lg">
+                                        <div class="modal-content">
+
+                                            <!-- Modal Header -->
+                                            <div class="modal-header">
+                                                <p class="modal-title font-weight-bold">SARS-CoV-2 whole genome
+                                                    sequencing </p>
+                                                <button type="button" class="close"
+                                                    data-dismiss="modal">&times;</button><br>
+                                            </div>
+
+                                            <!-- Modal body -->
+                                            <div class="modal-body">
+                                                <table class="table table-striped">
+                                                    <thead>
+                                                        <tr>
+                                                            <th>Location</th>
+                                                            <th>Sub-topics</th>
+                                                            <th>Formal assessment</th>
+                                                            <th>Accredited</th>
+                                                            <th>Available</th>
+                                                            <th>Duration</th>
+                                                            <th>Live/Online</th>
+                                                            <th>With subtitles</th>
+                                                        </tr>
+
+                                                    </thead>
+                                                    <tbody>
+                                                        <tr>
+                                                            <td>Copenhagen, Denmark</td>
+                                                            <td>Agenda available on course website:
+                                                                <a href=" https://antimicrobialresistance-dk.danaweb5.com/seqafrica/seqafrica-courses/sars-cov-2-whole-genome-sequencing.aspx."
+                                                                    target="_blank">click here
+                                                                </a>
+
+                                                            </td>
+                                                            <td>No</td>
+                                                            <td>No</td>
+                                                            <td>Constantly available</td>
+                                                            <td>The course was originally an online course over 4
+                                                                half-days consisting of live and pre-recorded lectures
+                                                                and hands-on exercises.</td>
+                                                            <td>Face-to-face sessions and pre-recorded materials</td>
+                                                            <td>No</td>
+                                                        </tr>
+                                                    </tbody>
+
+                                                </table>
+                                            </div>
+
+                                            <!-- Modal footer -->
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-danger btn-sm"
+                                                    data-dismiss="modal">Close</button>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                            </td>
+                        </tr>
+
+
                     <tfoot>
                         <tr>
                             <th>Organisation</th>
