--- a/profiles.html
+++ b/profiles.html
@@ -36,19 +36,15 @@ permalink: /profiles/bioinformatics-profiles/
     <thead>
         <tr>
             <th></th>
-            <th>Name</th>
-            <th>Position</th>
-            <th>Office</th>
-            <th>Salary</th>
+            <th>Job Title</th>
+
         </tr>
     </thead>
     <tfoot>
         <tr>
             <th></th>
-            <th>Name</th>
-            <th>Position</th>
-            <th>Office</th>
-            <th>Salary</th>
+            <th>Job Title</th>
+
         </tr>
     </tfoot>
 </table>
@@ -72,10 +68,10 @@ permalink: /profiles/bioinformatics-profiles/
                     },
                     width: "15px"
                 },
-                { "data": "name" },
-                { "data": "position" },
-                { "data": "office" },
-                { "data": "salary" }
+                { "data": "job_title" },
+                // { "data": "position" },
+                // { "data": "office" },
+                // { "data": "salary" }
             ],
             "order": [[1, 'asc']]
         });
@@ -109,21 +105,65 @@ permalink: /profiles/bioinformatics-profiles/
         });
     });
 
-    function format(d) {
+    function format(mk) {
 
         // `d` is the original data object for the row
         return '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">' +
             '<tr>' +
-            '<td>Full name:</td>' +
-            '<td>' + d.name + '</td>' +
+            '<td><b> Foundational Skills </b></td>' +
+            // '<td>' + d.job_title + '</td>' +
             '</tr>' +
             '<tr>' +
-            '<td>Extension number:</td>' +
-            '<td>' + d.extn + '</td>' +
+            // '<td>Extension number:</td>' +
+            '<tr>' +
+            '<td>' + mk.skill_1 + '</td>' +
             '</tr>' +
             '<tr>' +
-            '<td>Extra info:</td>' +
-            '<td>And any further details here (images etc)...</td>' +
+            '<td>' + mk.skill_2 + '</td>' +
+            '</tr>' +
+            '<tr>' +
+            '<td>' + mk.skill_3 + '</td>' +
+            '</tr>' +
+            '<tr>' +
+            '<td>' + mk.skill_4 + '</td>' +
+            '</tr>' +
+            '<tr>' +
+            // '<td>Extra info:</td>' +
+            // '<td>And any further details here (images etc)...</td>' +
+            '</tr>' +
+            '</table>'
+
+
+            ;
+    }
+
+
+
+    function format(e) {
+
+        // `d` is the original data object for the row
+        return '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">' +
+            '<tr>' +
+            '<td><b> Foundational Skills </b></td>' +
+            // '<td>' + d.job_title + '</td>' +
+            '</tr>' +
+            '<tr>' +
+            // '<td>Extension number:</td>' +
+            '<tr>' +
+            '<td>' + e.skill_1 + '</td>' +
+            '</tr>' +
+            '<tr>' +
+            '<td>' + e.skill_2 + '</td>' +
+            '</tr>' +
+            '<tr>' +
+            '<td>' + e.skill_3 + '</td>' +
+            '</tr>' +
+            '<tr>' +
+            '<td>' + e.skill_4 + '</td>' +
+            '</tr>' +
+            '<tr>' +
+            // '<td>Extra info:</td>' +
+            // '<td>And any further details here (images etc)...</td>' +
             '</tr>' +
             '</table>';
     }
@@ -131,68 +171,39 @@ permalink: /profiles/bioinformatics-profiles/
     var testdata = {
         "data": [
             {
-                "name": "Tiger Nixon",
-                "position": "System Architect",
-                "salary": "$320,800",
+                "job_title": "Laboratory Manager",
+                // "position": "System Architect",
+                // "salary": "$320,800",
                 "start_date": "2011/04/25",
-                "office": "Edinburgh",
-                "extn": "5421"
+                // "office": "Edinburgh",
+                "extn": "5421",
+                "skill_1": "Health and Safety",
+                "skill_2": "Ethics and Policy",
+                "skill_3": "Introduction to Genetic Epidemiology",
             },
             {
-                "name": "Garrett Winters",
-                "position": "Accountant",
-                "salary": "$170,750",
+                "job_title": "Wetlab Scientist",
+                // "position": "Accountant",
+                // "salary": "$170,750",
                 "start_date": "2011/07/25",
-                "office": "Tokyo",
+                // "office": "Tokyo",
                 "extn": "8422"
             },
             {
-                "name": "Ashton Cox",
-                "position": "Junior Technical Author",
-                "salary": "$86,000",
+                "job_title": "Bioinformatics Scientist",
+                // "position": "Junior Technical Author",
+                // "salary": "$86,000",
                 "start_date": "2009/01/12",
-                "office": "San Francisco",
+                // "office": "San Francisco",
                 "extn": "1562"
             },
             {
-                "name": "Cedric Kelly",
-                "position": "Senior Javascript Developer",
-                "salary": "$433,060",
+                "job_title": "Systems Administrator",
+                // "position": "Senior Javascript Developer",
+                // "salary": "$433,060",
                 "start_date": "2012/03/29",
-                "office": "Edinburgh",
+                // "office": "Edinburgh",
                 "extn": "6224"
-            },
-            {
-                "name": "Airi Satou",
-                "position": "Accountant",
-                "salary": "$162,700",
-                "start_date": "2008/11/28",
-                "office": "Tokyo",
-                "extn": "5407"
-            },
-            {
-                "name": "Brielle Williamson",
-                "position": "Integration Specialist",
-                "salary": "$372,000",
-                "start_date": "2012/12/02",
-                "office": "New York",
-                "extn": "4804"
-            },
-            {
-                "name": "Herrod Chandler",
-                "position": "Sales Assistant",
-                "salary": "$137,500",
-                "start_date": "2012/08/06",
-                "office": "San Francisco",
-                "extn": "9608"
-            },
-            {
-                "name": "Rhona Davidson",
-                "position": "Integration Specialist",
-                "salary": "$327,900",
-                "start_date": "2010/10/14",
-                "office": "Tokyo",
-                "extn": "6200"
             }
 
 
