changed mk to d

--- a/profiles.html
+++ b/profiles.html
@@ -105,7 +105,7 @@ permalink: /profiles/bioinformatics-profiles/
         });
     });
 
-    function format(mk) {
+    function format(d) {
 
         // `d` is the original data object for the row
         return '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">' +
@@ -116,16 +116,16 @@ permalink: /profiles/bioinformatics-profiles/
             '<tr>' +
             // '<td>Extension number:</td>' +
             '<tr>' +
-            '<td>' + mk.skill_1 + '</td>' +
+            '<td>' + d.skill_1 + '</td>' +
             '</tr>' +
             '<tr>' +
-            '<td>' + mk.skill_2 + '</td>' +
+            '<td>' + d.skill_2 + '</td>' +
             '</tr>' +
             '<tr>' +
-            '<td>' + mk.skill_3 + '</td>' +
+            '<td>' + d.skill_3 + '</td>' +
             '</tr>' +
             '<tr>' +
-            '<td>' + mk.skill_4 + '</td>' +
+            '<td>' + d.skill_4 + '</td>' +
             '</tr>' +
             '<tr>' +
             // '<td>Extra info:</td>' +
@@ -140,8 +140,7 @@ permalink: /profiles/bioinformatics-profiles/
         "data": [
             {
                 "job_title": "Laboratory Manager",
-                // "position": "System Architect",
-                // "salary": "$320,800",
+
                 "start_date": "2011/04/25",
                 // "office": "Edinburgh",
                 "extn": "5421",
@@ -151,16 +150,14 @@ permalink: /profiles/bioinformatics-profiles/
             },
             {
                 "job_title": "Wetlab Scientist",
-                // "position": "Accountant",
-                // "salary": "$170,750",
+
                 "start_date": "2011/07/25",
                 // "office": "Tokyo",
                 "extn": "8422"
             },
             {
                 "job_title": "Bioinformatics Scientist",
-                // "position": "Junior Technical Author",
-                // "salary": "$86,000",
+
                 "start_date": "2009/01/12",
                 // "office": "San Francisco",
                 "extn": "1562",
@@ -171,8 +168,7 @@ permalink: /profiles/bioinformatics-profiles/
             },
             {
                 "job_title": "Systems Administrator",
-                // "position": "Senior Javascript Developer",
-                // "salary": "$433,060",
+
                 "start_date": "2012/03/29",
                 // "office": "Edinburgh",
                 "extn": "6224",
