--- a/pha4ge.html
+++ b/pha4ge.html
@@ -1,19 +1,18 @@
 ---
 layout: default
-title: Resources
-permalink: /resources/
+title: PHA4GE
+permalink: /resources/pha4ge/
 ---
 <div class="row">
   <div class="col-sm-12">
     <p>
-    <h3>Pathogen genomics </h3>
+    <h3>PHA4GE </h3>
     </p>
   </div>
 </div>
 
 <div class="row">
   <div class="col-sm-12">
-    <p> <strong>PHA4GE </strong></p>
     <p>The activities within PHA4GE are aligned to its vision of achieving a rapid global genomic-driven public
       health
       response to disease outbreaks. Building the data standards, and sharing best practices require the input
@@ -84,24 +83,3 @@ permalink: /resources/
 
 
 
-<div class="row">
-  <div class="col-sm-12">
-    <p> <strong>IDseq </strong></p>
-    <p>IDseq is user-friendly software platform, originally developed for metagenomics studies. Functionality has
-      since
-      been added for SC2 consensus assembly calling from paired-end Illumina data.
-      <br><a href="https://www.discoveridseq.com/" target="_blank">https://www.discoveridseq.com/</a>
-    </p>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-sm-12">
-    <p> <strong>Basestack </strong></p>
-    <p>Basestack is a platform for local deployment of standardized genomic surveillance analysis tools. It
-      currently
-      enables real-time analysis of Nanopore generated sequencing data for SARS-CoV-2.
-      <br><a href="https://jhuapl-bio.github.io/Basestack/" target="_blank">https://jhuapl-bio.github.io/Basestack/</a>
-    </p>
-  </div>
-</div>
