added past courses link

--- a/training_materials.html
+++ b/training_materials.html
@@ -18,6 +18,7 @@ permalink: /resources/training-materials/
     <p>
     <h3>Training Materials </h3>
     </p>
+    This is a list of Pathogen Genomic Training resources. Courses we organise are available at <a href="https://uct-cbio.github.io/ngs-academy/courses/past-courses/" target="_blank">https://uct-cbio.github.io/ngs-academy/courses/past-courses/ </a> <br><br>
   </div>
 </div>
 
