--- a/training_materials.html
+++ b/training_materials.html
@@ -18,6 +18,7 @@ permalink: /resources/training-materials/
     <p>
     <h3>Training Materials </h3>
     </p>
+
     This is a list of Pathogen Genomic Training resources. Courses we organise are available at <a href="https://uct-cbio.github.io/ngs-academy/courses/past-courses/" target="_blank">https://uct-cbio.github.io/ngs-academy/courses/past-courses/ </a> <br><br>
   </div>
 </div>
@@ -395,6 +396,7 @@ AMR Workshop 2021​
                               <tr>
                                   <th>Module</th>
                                   <th>Title</th>
+                                  <th>Presentation</th>
                               </tr>
 
                           </thead>
@@ -402,20 +404,24 @@ AMR Workshop 2021​
                               <tr>
                                   <td>Module 1 </td>
                                   <td><a href="https://www.youtube.com/watch?v=JJbyFi3IdF4&list=PLwfIvG-RsIuTp6zDaBhcDVC7OthvF5Hpx&index=3" target="_blank">Introduction to databases and resources for AMR genomics </a></td>
-                              </tr>
+                                  <td> <a href="{{ site.url }}uploads/1.kara_tsang_databases_and_resources_for_amr_genomics.pdf" target="_blank">Presentation 1</a></td>
+                                </tr>
                               <tr>
                                 <td>Module 2 </td>
                                 <td><a href="https://www.youtube.com/watch?v=2b0Y8-9MCc8&list=PLwfIvG-RsIuTp6zDaBhcDVC7OthvF5Hpx&index=4" target="_blank">Theory and use of bioinformatics tools to detect AMR genes from genomes </a> </td>
-                            </tr>
+                                <td><a href="{{ site.url }}uploads/2.mike_feldgarden_amr_gene_prediction_tools.pdf" target="_blank">Presentation 2</a></td>
+                              </tr>
 
                             <tr>
                               <td>Module 3 </td>
                               <td><a href="https://www.youtube.com/watch?v=ARE7RdXFRM0&list=PLwfIvG-RsIuTp6zDaBhcDVC7OthvF5Hpx&index=5" target="_blank">Comparing and reporting AMR results using hAMRonization </a> </td>
-                          </tr>
+                              <td> <a href="{{ site.url }}uploads/3.ines_mendes_streamlining_reporting_with_hamronization.pdf" target="_blank">Presentation 3</a></td>
+                            </tr>
                           <tr>
                             <td>Module 4 </td>
                             <td><a href="https://www.youtube.com/watch?v=MU_vBrMnJf8&list=PLwfIvG-RsIuTp6zDaBhcDVC7OthvF5Hpx&index=6" target="_blank">AMR Genomics: Reads to Reports </a> </td>
-                        </tr>
+                            <td> <a href="{{ site.url }}uploads/4.finlay_maguire_reads_to_reports_practical_demo.pdf" target="_blank">Presentation 4</a> </td>
+                          </tr>
 
 
 
