updated tools and resources

--- a/tools_resources.html
+++ b/tools_resources.html
@@ -31,3 +31,13 @@ permalink: /resources/
     </p>
   </div>
 </div>
+
+
+<div class="row">
+  <div class="col-sm-12">
+    <p> <strong>No code Phylogenetic analysis </strong></p>
+    <p>An open source, free, no-code genomic epidemiology analysis platform for public health
+      <br><a href="https://czgenepi.org/" target="_blank">https://czgenepi.org/</a>
+    </p>
+  </div>
+</div>
