--- a/upcoming-courses.html
+++ b/upcoming-courses.html
@@ -18,7 +18,7 @@ permalink: /courses/upcoming-courses/
       {% for post in site.posts %}
       {% if post.categories contains "upcoming" %}
       <li class="list-unstyled">
-        <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+        <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a><br>{{post.start_date | date_to_string}} - {{post.end_date| date_to_string}}
         <p>{{post.course_overview}}<small class="text-muted"> posted: {{post.date
             | date_to_string}} </small></p>
 
