updated past courses page

--- a/related-courses.html
+++ b/related-courses.html
@@ -18,7 +18,7 @@ permalink: /courses/related-courses/
       {% if post.categories contains "related" %}
       <li class="list-unstyled">
         <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
-        <p>{{post.course_overview}}</p><small class="text-muted">posted:{{post.date
+        <p>{{post.course_overview}}</p><small class="text-muted">posted:{{post.posted_date
           | date_to_string}} </small>
 
 
